# BoilR

./: Cargo.toml
src/: config.rs  github.rs  main.rs  migration.rs  platform.rs  settings.rs
src/amazon/: amazon_platform.rs
src/egs/: epic_platform.rs
src/flatpak/: platform.rs
src/gog/: gog_platform.rs
src/heroic/: commandline_builder.rs  heroic_game.rs  heroic_game_type.rs  heroic_platform.rs  mod.rs
src/itch/: itch_platform.rs
src/legendary/: legendary_platform.rs
src/lutris/: lutris_platform.rs
src/origin/: origin_platform.rs
src/settings/: migration.rs  mod.rs  settings.rs
src/steam/: utils.rs
src/steamgriddb/: cached_search.rs  downloader.rs
src/sync/: symlinks.rs  synchronization.rs
src/testdata/: heroic_extened_game.json
src/ui/: defines.rs  mod.rs  new_uiapp.rs  sync_action.rs  ui_image_download.rs  ui_import_games.rs  ui_settings.rs  uiapp.rs
src/ui/image_handling/: fetch_status.rs  image_load.rs  internal_images.rs  mod.rs  texture_state.rs  ui_image_download.rs
src/ui/images/: image_select.rs  image_type_select.rs  mod.rs
src/ui/settings/: mod.rs  ui_settings.rs
src/ui/shortcuts/: mod.rs  ui_import_games.rs
src/ui/style/: mod.rs  styling.rs
src/uplay/: platform.rs
