[package]
edition = "2021"
name = "boilr"
version = "1.3.18"

[dependencies]
base64 = "^0.13.0"
chrono = "^0.4.19"
config = "^0.13.1"
copypasta = "^0.7.1"
flate2 = "^1.0.24"
is_executable = "^1.0.1"
nom = "^7.1.1"
rusty-leveldb = "^0.3.6"
serde_json = "^1.0.81"
sqlite = "^0.26.0"
steam_shortcuts_util = "^1.1.8"
sysinfo = "^0.24.2"
threadpool="^1.8.1"



[dependencies.steamgriddb_api]
version = "^0.3.1"
default_features=false
features=["blocking"]

[dependencies.dashmap]
features = ["serde"]
version = "^5.3.4"

[dependencies.eframe]
version = "^0.18.0"

[dependencies.egui]
version = "^0.18.1"

[dependencies.image]
features = ["png"]
version = "^0.24.2"

[dependencies.reqwest]
default_features = false
features = ["blocking"]
version = "^0.11.10"

[dependencies.serde]
features = ["derive"]
version = "^1.0.137"

[dependencies.toml]
version = "^0.5.9"

[target]
[target."cfg(windows)"]
[target."cfg(windows)".build-dependencies]
winres = "^0.1.12"

[target."cfg(windows)".dependencies]
winreg = "^0.10.1"

[profile.release]
incremental = true